glx/testdata/invalid/invalid-assertion-properties/relationships/rel-parent-bob.glx
relationships:
  rel-parent-bob:
    type: parent-child
    participants:
      - person: person-father
        role: parent
      - person: person-bob
        role: child
